Fix z-index on large

--- a/src/components/organisms/Header/Header.module.scss
+++ b/src/components/organisms/Header/Header.module.scss
@@ -33,7 +33,6 @@
 
 .header__nav {
   width: 100%;
-  z-index: $z-index-nav-small;
 
   &--invisible {
     display: none;
@@ -41,6 +40,10 @@
 
   &--visible {
     display: block;
+  }
+
+  @include tools.respond-up-to(large) {
+    z-index: $z-index-nav-small;
   }
 
   @include tools.respond-from(large) {
